# PoseTrainer

./: .firebaserc  .gitignore  Directory.Build.props  README.md  WASM_COMPATIBILITY.md  firebase.json  pubspec.yaml
.github/: copilot-instructions.md  copilot-instructions_bak.md
.github/workflows/: deploy_firebase_hosting.yml
android/app/: build.gradle.kts
docs/: architecture.md  brush_engine.md  cache_busting.md  debug_logging.md  drawing_canvas.md  google_drive_implementation.md  google_drive_setup.md  google_sign_in_refactor.md  google_sign_in_web_guide.md  google_sign_in_web_implementation_summary.md  mode_selection_feature.md  profiler_hud.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/constants/: brush_defaults.dart  layout.dart
lib/models/: pose.dart  (+4 more)
rust/drawing_canvas/: .gitignore  Cargo.toml  README.md
rust/drawing_canvas/.cargo/: config.toml
rust/drawing_canvas/docs/: canvas_sizing.md
rust/drawing_canvas/docs/planning/: basic_drawing_plan.md
rust/drawing_canvas/src/: app.rs  brush.rs  color.rs  debug.rs  input.rs  lib.rs  main.rs  renderer.rs  window.rs
rust/drawing_canvas/src/shaders/: blit.wgsl  brush.wgsl
rust/drawing_canvas/www/: https_server.py  index.html  package.json
rust/drawing_canvas/www-js-input-test/: index.html
shaders/: linear_dab_blend.frag  linear_dab_blend_uniform.frag  present_tile_over_paper.frag  pressure_dab.frag
test/: pose_sequence_service_test.dart  timer_service_test.dart  widget_test.dart
tools/: log_receiver.py  post_build_web.bat  post_build_web.ps1  post_build_web.sh  post_build_web_bash.bat  start_flutter_https.bat  start_log_receiver.bat
tools/wgpu-probe/: .gitignore  Cargo.toml  README.md  copy_to_flutter.bat  index.html
tools/wgpu-probe/src/: lib.rs  main.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+71 files in other folders)
